--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ scikit-learn = "^1.5.1"
 ipykernel = "^6.29.5"
 typing-extensions = "^4.12.2"
 ipython = "^8.27.0"
+pytest = "^8.3.3"
 
 
 [build-system]
